--- a/estilos.css
+++ b/estilos.css
@@ -1,20 +1,20 @@
 body {
     background:
-    linear-gradient(to left, rgba(0, 0, 0, 0.5), rgba(143,16,16,.5)),
-    url(fondo.jpg) no-repeat center fixed;
+        linear-gradient(to left, rgba(0, 0, 0, 0.5), rgba(143, 16, 16, .5)),
+        url(fondo.jpg) no-repeat center fixed;
     background-size: cover;
     font-family: 'Roboto Condensed', sans-serif;
-    
+
 }
 
-.titulo{
+.titulo {
     display: flex;
-    
+
     justify-content: center;
     color: aliceblue;
 }
 
-.grid{
+.grid {
     display: grid;
     margin: 20px;
     gap: 20px;
@@ -23,29 +23,63 @@ body {
     grid-template-rows: auto auto;
 }
 
-.imagen{
+.imagen {
     overflow: hidden;
-    
+
 }
 
-.imagen img{
+.imagen img {
     width: 100%;
     border-radius: 20px;
 }
 
-h2{
+h2 {
     color: aliceblue;
 }
 
-form{
+form {
     color: aliceblue;
 }
 
 input {
     background-color: rgba(78, 13, 13, 0.501);
+    color: white;
 }
 
 button {
     color: aliceblue;
     background-color: rgba(78, 13, 13, 0.501);
+}
+
+
+.formulario {
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+
+    max-width: 50%;
+}
+
+ul li {
+    color: white;
+    list-style: none;
+}
+
+
+table {
+    border-collapse: collapse;
+    width: 100%;
+    text-align: center;
+}
+
+table th,
+table td {
+    padding: 5px;
+    border: solid 1px #777;
+    background-color:  rgba(255, 255, 255, 0.5);
+}
+
+table th {
+    background-color: lightblue;
+    width: 20%;
 }
