--- a/estilos.css
+++ b/estilos.css
@@ -28,9 +28,26 @@ body {
 
 }
 
+.main {
+    display: flex;
+}
+
+.main1 {
+    width: 50%;
+}
+
+.main2 {
+    width: 50%;
+    text-align: center;
+}
+
 .imagen img {
     width: 100%;
     border-radius: 20px;
+}
+
+hr {
+    border: solid 1px white
 }
 
 h2 {
@@ -44,11 +61,14 @@ form {
 input {
     background-color: rgba(78, 13, 13, 0.501);
     color: white;
+    border: solid 1px black;
 }
 
 button {
-    color: aliceblue;
-    background-color: rgba(78, 13, 13, 0.501);
+    color: rgb(0, 0, 0);
+    background-color: rgba(69, 111, 143, 0.541);
+    border: solid 1px black;
+    border-radius: 3px;
 }
 
 
@@ -57,7 +77,6 @@ button {
     flex-direction: column;
     gap: 12px;
 
-    max-width: 50%;
 }
 
 ul li {
@@ -75,11 +94,11 @@ table {
 table th,
 table td {
     padding: 5px;
-    border: solid 1px #777;
-    background-color:  rgba(255, 255, 255, 0.5);
+    border: solid 1px #000000;
+    background-color: rgba(255, 255, 255, 0.3);
 }
 
 table th {
-    background-color: lightblue;
+    background-color: rgba(69, 111, 143, 0.541);
     width: 20%;
 }
